--- a/style.css
+++ b/style.css
@@ -62,10 +62,13 @@
 .college-dropout {
     border: 2px solid white;
     border-radius: 20px;
-    box-shadow: 5px 5px 5px 5px black;
+    box-shadow: 5px 5px 5px 5px rgb(113, 113, 113);
     
 }
 
+.headshot {
+    width: 500px;
+}
 .main p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
